--- a/s3-utils.cabal
+++ b/s3-utils.cabal
@@ -1,5 +1,5 @@
 Name:                s3-utils
-Version:             0.0
+Version:             0.0.1
 Synopsis:            core-utils for an S3 instance
 Description:         core-utils for an S3 instance
 License:             GPL
@@ -7,5 +7,9 @@ Author:              Patrick Brisbin
 Maintainer:          Patrick Brisbin <me@pbrisbin.com>
 Build-type:          Simple
 Build-Depends:       base, directory, filepath, bytestring, hS3, wai-app-static
+
 Executable:          s3cp
 Main-is:             s3cp.hs
+
+Executable:          s3ls
+Main-is:             s3ls.hs
