--- a/s3-utils.cabal
+++ b/s3-utils.cabal
@@ -1,5 +1,5 @@
 Name:                s3-utils
-Version:             0.0.1
+Version:             0.0.2
 Synopsis:            core-utils for an S3 instance
 Description:         core-utils for an S3 instance
 License:             GPL
@@ -13,3 +13,6 @@ Main-is:             s3cp.hs
 
 Executable:          s3ls
 Main-is:             s3ls.hs
+
+Executable:          s3rm
+Main-is:             s3rm.hs
